examples/negative/41_fluo_no_imposer.fluo
# BREAKS: a subnet with no pressure imposer (fluorite/02 sec. 4: "at
#   least one pressure IMPOSER ... per subnet -- otherwise the network
#   is singular by construction and rejected at compile time").
# EXPECT-WO31
import std.fluorite (Pipe)

medium Water: liquid
    props: registry(potable_water_nist)

flownet NoRef(medium=Water):
    nodes: a, b
    edges:
        pipe: Pipe(from=line.run) (a -> b)
